<resources>

    <string name="app_name">婷婷地图</string>
    <string name="location">定位</string>
    <string name="draw">绘制路线</string>
    <string name="draw_location">绘制移动路线</string>
    <string name="record_list">历史记录</string>
    <string name="setting">设置</string>

    <string name="recording_no_repeaet">正在记录，请不要重复点击</string>
    <string name="no_recording_click_start">请先点击开始记录</string>
    <string name="cannot_be_empty">不可为空</string>
    <string name="start_record">开始记录</string>
    <string name="stop_record">结束记录</string>
    <string name="clear_layer">清除图层</string>
    <string name="text_loading">正在加载...</string>
    <string name="network_unbale">网络不可用</string>
    <string name="load_fail">加载失败</string>
    <string name="no_data">暂无数据</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="count_of_location">定位次数:%1$d</string>
    <string name="sim_location">模拟位置</string>

</resources>
