<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <Button
        android:id="@+id/btn_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/draw" />

    <Button
        android:id="@+id/btn_draw_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/draw_location" />
</LinearLayout>
